--- a/Quickstart/index.html
+++ b/Quickstart/index.html
@@ -1,7 +1,11 @@
 <html>
-  <head>
+
+<head>
+
+    <base href="/">
+
     <title>Angular 2 QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -13,9 +17,11 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
-      System.config({
+        System.config({
         packages: {        
           app: {
             format: 'register',
@@ -27,13 +33,14 @@
             .then(null, console.error.bind(console));
     </script>
 
-  </head>
+</head>
 
-  <!-- 3. Display the application -->
-  <body>
-      
+<!-- 3. Display the application -->
+
+<body>
+
     <my-app>Loading...</my-app>
-    
-  </body>
+
+</body>
 
 </html>
