--- a/Quickstart/index.html
+++ b/Quickstart/index.html
@@ -18,6 +18,8 @@
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
+    
+    <link rel="stylesheet" href="app/styles/styles.css">
 
     <!-- 2. Configure SystemJS -->
     <script>
